--- a/src/styles.css
+++ b/src/styles.css
@@ -1,14 +1,50 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.app-container {
+  margin: 0 auto;
+  padding: 0 20px;
+  max-width: 768px;
+}
+
+h1 {
+  text-align: center;
+}
+
+form {
+  display: block;
+  margin-bottom: 20px;
+}
+
+.user {
+  display: flex;
+  flex-direction: row;
+  background: #efefef;
+  padding: 10px;
+  margin-bottom: 20px;
+}
+
+.user-img,
+.user-desc {
+  display: flex;
+  flex-direction: column;
+  flex-basis: 100%;
+  flex: 1;
+}
+
+.user-img {
+  max-width: 100px;
+}
+
+.user-img img {
+  width: 90px;
+}
+
+.user-desc h3 {
+  margin: 0;
+  margin-bottom: 5px;
+  color: #2196f3;
 }
